content and images

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 -->
 <html>
 	<head>
+		<link rel="shortcut icon" type="image/png" href="images/Jean (1).png">
 		<title>Jean Yang</title>
 		<meta charset="utf-8" />
 		<link rel="stylesheet"
@@ -20,7 +21,6 @@
 
 		<!-- Wrapper -->
 			<div id="wrapper" class="divided">
-
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
@@ -47,7 +47,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/lifegram.gif" alt="" />
+							<img src="images/lifegram.png" alt="" />
 						</div>
 					</section>
 
@@ -55,9 +55,9 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Hello Avocado</h2>
-							<p>Avocado is the new hot healthy superfood. You can see avocados everywhere - guacamole dips at your friend's party,
+							<!-- <p>Avocado is the new hot healthy superfood. You can see avocados everywhere - guacamole dips at your friend's party,
 							delicious salads at your parents' table, and of course avocado toast at the overpriced hipster coffee shop right around
-							the corner.</p> 
+							the corner.</p>  -->
 							<p>Hello Avocado is an interactive data visualization on avocado global trade and production. Have fun and get to know more
 							about avocados!</p>
 							<ul class="actions">
@@ -66,7 +66,7 @@
 							</ul>
 						</div>
 						<div class="image" width="300px">
-							<img src="images/avocado.gif" alt="" />
+							<img src="images/whitebackground.png" alt="" />
 						</div>
 					</section>
 
@@ -81,7 +81,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight03.jpg" alt="" />
+							<img src="images/lightup.png" alt="" />
 						</div>
 					</section>
 
@@ -89,6 +89,7 @@
 				<section class="wrapper style1 align-center">
 					<div class="inner">
 						<h2>Technologies</h2>
+						</br>
 						<div class="tech-items">
 							<i class="devicon-d3js-plain colored"></i>
 							<i class="devicon-bootstrap-plain-wordmark colored"></i>
@@ -285,7 +286,7 @@
 								<section style="width: 400px;">
 									<img src="images/appacademy_logo.png" width='150'>
 									<h3>App Academy</h3>
-									<p>New York</p>
+									<h5>New York, New York</h5>
 									<h4>Fall Stack Web Development</h4>
 									<h4>September 2019 - January 2020</h4>
 									<p>Over 1,000 hours of rigorous full stack web development course with 3% acceptance rate</p>
@@ -293,7 +294,7 @@
 								<section style="width: 400px;">
 									<img src="images/columbia.png" width="120"/>
 									<h3>Columbia University</h3>
-									<p>New York</p>
+									<h5>New York, New York</h5>
 									<h4>International Educational Development</h4>
 									<h4>September 2018 - December 2019</h4>
 									<p>Concentration in International Policy and Planning</p>
@@ -304,7 +305,7 @@
 					</section>
 
 				<!-- Seven -->
-					<section class="wrapper style1 align-center">
+					<!-- <section class="wrapper style1 align-center">
 						<div class="inner medium">
 							<h2>Get in touch</h2>
 							<form method="post" action="#">
@@ -328,11 +329,13 @@
 							</form>
 
 						</div>
-					</section>
+					</section> -->
 
 				<!-- Footer -->
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
+							<h2>Contacts</h2>
+							<p>Feel free to contact me for job opportunities, collaboration, questions, or just to say hi.</p>
 							<ul class="icons">
 								
 								<li><a href="https://www.linkedin.com/in/jean-yang-327497156/" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
