--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/italy.jpg" alt="" />
+							<img src="https://lifegram-seeds.s3.amazonaws.com/jean.jpg" alt="" />
 						</div>
 					</section>
 
