--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 -->
 <html>
 	<head>
+		<link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC&display=swap" rel="stylesheet">
 		<link rel="shortcut icon" type="image/png" href="images/Jean (1).png">
 		<title>Jean Yang</title>
 		<meta charset="utf-8" />
@@ -17,7 +18,7 @@
 		<link rel="stylesheet" href="assets/css/custom.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-	<body class="is-preload">
+	<body class="is-preload" >
 
 		<!-- Wrapper -->
 			<div id="wrapper" class="divided">
@@ -282,7 +283,7 @@
 						<div class="inner">
 							<h2>Education</h2>
 							<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p> -->
-							<div class="items style1 medium onscroll-fade-in">
+							<div class="items style1 medium onscroll-fade-in " id='education-section'>
 								<section style="width: 400px;">
 									<img src="images/appacademy_logo.png" width='150'>
 									<h3>App Academy</h3>
@@ -330,6 +331,7 @@
 
 						</div>
 					</section> -->
+					
 
 				<!-- Footer -->
 					<footer class="wrapper style1 align-center">
