--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Jean Yang</h1>
-							<p class="major">I'm a full stack software engineer, proficient with React, Redux, and JavaScript. Loves hiking, traveling, and squash.</p>
+							<p class="major">I'm a full stack software engineer, proficient with React, Redux, and JavaScript. Loves hiking, traveling, and squash.
+								Based in New York City.
+							</p>
 							<ul class="actions">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Resume</a></li>
 							</ul>
