--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Lifgram</h2>
-							<p>Lifegram is a social media platform inspired by Instagram for people who enjoy sharing their life snippets with posts,
-							image uploads, comments, and likes functions.</p>
+							<p>A pixel-perfect Instagram clone with React as the frontend design and Rails as the backend server
+							for people who enjoy sharing their life snippets.</p>
 							<ul class="actions" id="buttons">
 								<li><a href="https://lifegram.herokuapp.com/#/" class="button">Live</a></li>
 								<li><a href="https://github.com/jeanyang0519/Lifegram" class="button">Github</a></li>
@@ -61,8 +61,9 @@
 							<!-- <p>Avocado is the new hot healthy superfood. You can see avocados everywhere - guacamole dips at your friend's party,
 							delicious salads at your parents' table, and of course avocado toast at the overpriced hipster coffee shop right around
 							the corner.</p>  -->
-							<p>Hello Avocado is an interactive data visualization on avocado global trade and production. Have fun and get to know more
-							about avocados!</p>
+							<p>An interactive data visualization web presents various datasets on avocado global trade and production
+								with JavaScript and D3.js.
+								Check out the website and get to know more about avocados!</p>
 							<ul class="actions">
 								<li><a href="https://jeanyang0519.github.io/Hello-Avocado/" class="button">Live</a></li>
 								<li><a href="https://github.com/jeanyang0519/Hello-Avocado" class="button">Github</a></li>
@@ -77,7 +78,8 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Light Up</h2>
-							<p>A mentorship community for students to connect over shared interests and goals.</p>
+							<p>A single-page web app for students to develop mentorships and networks over shared interests and goals. 
+								Utilized MongoDB, Express.js, and React to create connections and live-chat functions.</p>
 							<ul class="actions live" >
 								<li><a href="http://light--up.herokuapp.com/#/" class="button">Live</a></li>
 								<li><a href="https://github.com/jeanyang0519/Light-Up" class="button">Github</a></li>
@@ -131,14 +133,14 @@
 				</section>
 
 						<!-- Gallery -->
-							<!-- <div class="gallery style2 medium lightbox onscroll-fade-in">
+							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
 									<a href="images/gallery/fulls/01.jpg" class="image">
 										<img src="images/gallery/thumbs/01.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Ipsum Dolor</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>New York</h3>
+										<p>It was a lovely afternoon at the Central Park last summer.</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -149,8 +151,8 @@
 										<img src="images/gallery/thumbs/02.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Feugiat Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Hawaii</h3>
+										<p>I still remember this beach is called Sunset Beach. It was my last night in Hawaii - absolutely gorgeous.</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -161,8 +163,8 @@
 										<img src="images/gallery/thumbs/03.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Magna Amet</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Hawaii</h3>
+										<p>Just chilling on the beach.</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -173,8 +175,8 @@
 										<img src="images/gallery/thumbs/04.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Sed Tempus</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Hawaii</h3>
+										<p>One of the most beautiful places I've ever been in my life. Will definitely revisit someday!</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -185,8 +187,9 @@
 										<img src="images/gallery/thumbs/05.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Ultrices Magna</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Vermont</h3>
+										<p>My fave ppl. My life in New York has been great beacase of them. It's my absolute pleasure to have them in my life.
+										</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -197,8 +200,9 @@
 										<img src="images/gallery/thumbs/06.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Sed Tempus</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Hawaii</h3>
+										<p>Amazing hike with Philip. He and Gabby showed my around when I was in Hawaii. I couldn't have such a wonderful trip
+											without them!</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -209,8 +213,8 @@
 										<img src="images/gallery/thumbs/07.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Ipsum Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Timmy and Patrick</h3>
+										<p>My best friends in New York. They are cute nerds and wonderful friends. They are that kind of friends that you won't get pissed off when they are drunk and knock on your door at 4 AM.</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -221,8 +225,8 @@
 										<img src="images/gallery/thumbs/08.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Magna Risus</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Cold Spring</h3>
+										<p>I always feel like the need to get out of the city from time to time. So Jonathan and I hopped on a train to escape the city for a bit.</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -233,8 +237,8 @@
 										<img src="images/gallery/thumbs/09.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Tempus Dolor</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Columbia University</h3>
+										<p>The reason I moved to New York. I took this picture when I got out of Butler Libray where I struggle and thrive.</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -245,8 +249,8 @@
 										<img src="images/gallery/thumbs/10.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Sed Etiam</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Los Angeles</h3>
+										<p>My first time in West coast.</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -257,8 +261,8 @@
 										<img src="images/gallery/thumbs/11.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Magna Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Taiwan</h3>
+										<p>生我養我的土地</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -269,8 +273,10 @@
 										<img src="images/gallery/thumbs/12.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Ipsum Dolor</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>My friends</h3>
+										<p>My wonderful wonderful wonderful friends in Taiwan.
+											在我需要的時給我鼓勵與支持的一群朋友
+										</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -278,29 +284,29 @@
 								</article>
 							</div>
 
-					</section> -->
+					</section>
 
 				<!-- Six -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Education</h2>
-							<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p> -->
+							<!-- <p>App Academy taught me how to code, Columbia University taught me how to analyze policy.</p> -->
 							<div class="items style1 medium onscroll-fade-in " id='education-section'>
 								<section style="width: 400px;">
 									<img src="images/appacademy_logo.png" width='150'>
-									<h3>App Academy</h3>
+									<h3 class="school">App Academy</h3>
 									<h5>New York, New York</h5>
 									<h4>Fall Stack Web Development</h4>
 									<h4>September 2019 - January 2020</h4>
-									<p>Over 1,000 hours of rigorous full stack web development course with 3% acceptance rate</p>
+									<p>Rigorous 1,000+ hours of full stack web development course with < 3% acceptance rate</p>
 								</section>
 								<section style="width: 400px;">
 									<img src="images/columbia.png" width="120"/>
-									<h3>Columbia University</h3>
+									<h3 class="school">Columbia University</h3 class="school">
 									<h5>New York, New York</h5>
-									<h4>International Educational Development</h4>
+									<h4>Master of Arts, International Educational Development</h4>
 									<h4>September 2018 - December 2019</h4>
-									<p>Concentration in International Policy and Planning</p>
+									<p>Concentration in International Policy</p>
 								</section>
 								
 							</div>
@@ -339,7 +345,7 @@
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Contacts</h2>
-							<p>Feel free to contact me for job opportunities, collaboration, questions, or just to say hi.</p>
+							<p>Feel free to contact me for job opportunities, collaboration, questions, or just to say hi!</p>
 							<ul class="icons">
 								
 								<li><a href="https://www.linkedin.com/in/jean-yang-327497156/" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
