--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 									</a>
 									<div class="caption">
 										<h3>Columbia University</h3>
-										<p>The reason I moved to New York. I took this picture when I got out of Butler Libray where I struggled and thrived.</p>
+										<p>The reason I moved to New York. I took this picture when I got out of Butler Libray where I struggled and struggled.</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
