--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 								Based in New York City.
 							</p>
 							<ul class="actions">
-								<li><a href="#first" class="button big wide smooth-scroll-middle">Resume</a></li>
+								<li><a href="https://pdfhost.io/v/3juC7+t4_Jean_Yang_Resumepdf.pdf" class="button big wide smooth-scroll-middle">Resume</a></li>
 							</ul>
 						</div>
 						<div class="image">
