--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 								Based in New York City.
 							</p>
 							<ul class="actions">
-								<li><a href="https://pdfhost.io/v/GCe6b5iH_Jean_Yang_Resumepdf.pdf" class="button big wide smooth-scroll-middle">Resume</a></li>
+								<li><a href="https://pdfhost.io/v/GCe6b5iH_Jean_Yang_Resumepdf.pdf" rel="noopener noreferrer" target="_blank" class="button big wide smooth-scroll-middle">Resume</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -45,8 +45,8 @@
 							<p>A pixel-perfect Instagram clone with React as the frontend design and Rails as the backend server
 							for people who enjoy sharing their life snippets.</p>
 							<ul class="actions" id="buttons">
-								<li><a href="https://lifegram.herokuapp.com/#/" class="button">Live</a></li>
-								<li><a href="https://github.com/jeanyang0519/Lifegram" class="button">Github</a></li>
+								<li><a href="https://lifegram.herokuapp.com/#/" rel="noopener noreferrer" target="_blank" class="button">Live</a></li>
+								<li><a href="https://github.com/jeanyang0519/Lifegram" rel="noopener noreferrer" target="_blank" class="button">Github</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -65,8 +65,8 @@
 								with JavaScript and D3.js.
 								Check out the website and get to know more about avocados!</p>
 							<ul class="actions">
-								<li><a href="https://jeanyang0519.github.io/Hello-Avocado/" class="button">Live</a></li>
-								<li><a href="https://github.com/jeanyang0519/Hello-Avocado" class="button">Github</a></li>
+								<li><a href="https://jeanyang0519.github.io/Hello-Avocado/" rel="noopener noreferrer" target="_blank" class="button">Live</a></li>
+								<li><a href="https://github.com/jeanyang0519/Hello-Avocado" rel="noopener noreferrer" target="_blank" class="button">Github</a></li>
 							</ul>
 						</div>
 						<div class="image" width="300px">
@@ -81,8 +81,8 @@
 							<p>A single-page web app for students to develop mentorships and networks over shared interests and goals. 
 								Utilized MongoDB, Express.js, and React to create connections and live-chat functions.</p>
 							<ul class="actions live" >
-								<li><a href="http://light--up.herokuapp.com/#/" class="button">Live</a></li>
-								<li><a href="https://github.com/jeanyang0519/Light-Up" class="button">Github</a></li>
+								<li><a href="http://light--up.herokuapp.com/#/" rel="noopener noreferrer" target="_blank" class="button">Live</a></li>
+								<li><a href="https://github.com/jeanyang0519/Light-Up" rel="noopener noreferrer" target="_blank" class="button">Github</a></li>
 							</ul>
 						</div>
 						<div class="image">
