--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Jean Yang</h1>
-							<p class="major">I'm a full stack software engineer, proficient with React, Redux, and JavaScript. Loves hiking, traveling, and squash.
+							<p class="major">I'm a full stack software engineer, proficient with React, Redux, and Rails. Loves hiking, traveling, and squash.
 								Based in New York City.
 							</p>
 							<ul class="actions">
@@ -39,14 +39,33 @@
 					</section>
 
 				<!-- Two -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+					<!-- <section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
-							<h2>Lifgram</h2>
+							<h2>Why I like to be a software developer?</h2>
+							<p>Learning something new</p>
+							<p>Being challenged from a simple bug fix to a big project implementation</p>
+							<p>Taking part in this fast-speed industry</p>
+							<p>Witnessing how technology improves the quality of life</p>
+							<p>Implementing awesome and creative ideas</p>
+							<p>Drinking delicious tea (not a coffee person)</p>
+						</div>
+						<div class="image">
+							<img src="images/gallery/fulls/06.jpg" alt="" />
+						</div>
+					</section> -->
+
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in"
+						id="first">
+						<div class="content">
+							<h2>Lifegram</h2>
 							<p>A pixel-perfect Instagram clone with React as the frontend design and Rails as the backend server
-							for people who enjoy sharing their life snippets.</p>
+								for people who enjoy sharing their life snippets.</p>
+							
 							<ul class="actions" id="buttons">
-								<li><a href="https://lifegram.herokuapp.com/#/" rel="noopener noreferrer" target="_blank" class="button">Live</a></li>
-								<li><a href="https://github.com/jeanyang0519/Lifegram" rel="noopener noreferrer" target="_blank" class="button">Github</a></li>
+								<li><a href="https://lifegram.herokuapp.com/#/" rel="noopener noreferrer" target="_blank"
+										class="button">Live</a></li>
+								<li><a href="https://github.com/jeanyang0519/Lifegram" rel="noopener noreferrer" target="_blank"
+										class="button">Github</a></li>
 							</ul>
 						</div>
 						<div class="image">
