--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 						<div class="content">
 							<h2>Light Up</h2>
 							<p>A single-page web app for students to develop mentorships and networks over shared interests and goals. 
-								Utilized MongoDB, Express.js, and React to create connections and live-chat functions.</p>
+								Utilized MongoDB, Express.js, and React to create connections and live-chat functions. [This project is still in progress.]</p>
 							<ul class="actions live" >
 								<li><a href="http://light--up.herokuapp.com/#/" rel="noopener noreferrer" target="_blank" class="button">Live</a></li>
 								<li><a href="https://github.com/jeanyang0519/Light-Up" rel="noopener noreferrer" target="_blank" class="button">Github</a></li>
