--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
 										</ul>
 									</div>
 								</article>
-								<article>
-									<a href="images/gallery/fulls/07.jpg" class="image">
+								<!-- <article> -->
+									<!-- <a href="images/gallery/fulls/07.jpg" class="image">
 										<img src="images/gallery/thumbs/07.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -287,7 +287,7 @@
 											<li><span class="button small">Details</span></li>
 										</ul>
 									</div>
-								</article>
+								</article> -->
 							</div>
 
 					</section>
