--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 				</section>
 
 						<!-- Gallery -->
-							<div class="gallery style2 medium lightbox onscroll-fade-in">
+							<!-- <div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
 									<a href="images/gallery/fulls/01.jpg" class="image">
 										<img src="images/gallery/thumbs/01.jpg" alt="" />
@@ -214,7 +214,7 @@
 										</ul>
 									</div>
 								</article>
-								<!-- <article> -->
+								<article> -->
 									<!-- <a href="images/gallery/fulls/07.jpg" class="image">
 										<img src="images/gallery/thumbs/07.jpg" alt="" />
 									</a>
@@ -287,8 +287,8 @@
 											<li><span class="button small">Details</span></li>
 										</ul>
 									</div>
-								</article> -->
-							</div>
+								</article>
+							</div> -->
 
 					</section>
 
