--- a/index.html
+++ b/index.html
@@ -346,10 +346,10 @@
 						</div>
 					</section> -->
 					
-					<section class="wrapper style1 align-center">
+					<section class="wrapper style1 align-center" id='test'>
 						
-						<div class="inner">
-						<div class="hi">
+						<div class="inner" id=facts-parent>
+						<div class="hi" id='facts'>
 							<h2>Why I Enjoy Being a Software Developer?</h2>
 							<p>Learning something new all the time</p>
 							<p>Being challenged from a simple bug fix to a big project implementation</p>
