--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@
 							<i class="devicon-html5-plain-wordmark colored"></i>
 							<i class="devicon-jquery-plain-wordmark colored"></i>
 							<i class="devicon-heroku-plain-wordmark colored"></i>
-							<i class="devicon-mocha-plain colored"></i>
-							<i class="devicon-atom-original-wordmark colored"></i>
-							<i class="devicon-visualstudio-plain-wordmark colored"></i>
 							<i class="devicon-express-original-wordmark colored"></i>
+							<!-- <i class="devicon-mocha-plain colored"></i> -->
+							<!-- <i class="devicon-atom-original-wordmark colored"></i> -->
+							<!-- <i class="devicon-visualstudio-plain-wordmark colored"></i> -->
 				
 						</div>
 					</div>
