--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 								Based in New York City.
 							</p>
 							<ul class="actions">
-								<li><a href="https://pdfhost.io/v/1WG20EEz_Jean_Yang_Resumepdf.pdf" rel="noopener noreferrer" target="_blank" class="button big wide smooth-scroll-middle">Resume</a></li>
+								<li><a href="https://pdfhost.io/v/eQWBJWX0_Jean_Yang_Resumepdf.pdf" rel="noopener noreferrer" target="_blank" class="button big wide smooth-scroll-middle">Resume</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -85,7 +85,7 @@
 						<div class="content">
 							<h2>Light Up</h2>
 							<p>A single-page web app for students to develop mentorships and networks over shared interests and goals. 
-								Utilized MongoDB, Express.js, and React to create connections and live-chat functions. [This project is still in progress.]</p>
+								Utilized MongoDB, Express.js, and React to create connections and live-chat functions.</p>
 							<ul class="actions live" >
 								<li><a href="http://light--up.herokuapp.com/#/" rel="noopener noreferrer" target="_blank" class="button">Live</a></li>
 								<li><a href="https://github.com/jeanyang0519/Light-Up" rel="noopener noreferrer" target="_blank" class="button">Github</a></li>
@@ -119,6 +119,7 @@
 							<i class="devicon-mongodb-plain-wordmark colored"></i>
 							<i class="devicon-nodejs-plain-wordmark colored"></i>
 							<i class="devicon-javascript-plain colored"></i>
+							<i class="devicon-python-plain-wordmark colored"></i>
 							<i class="devicon-ruby-plain-wordmark colored"></i>
 							<i class="devicon-rails-plain-wordmark colored"></i>
 							<i class="devicon-postgresql-plain-wordmark colored"></i>
