--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 								Based in New York City.
 							</p>
 							<ul class="actions">
-								<li><a href="https://pdfhost.io/v/eQWBJWX0_Jean_Yang_Resumepdf.pdf" rel="noopener noreferrer" target="_blank" class="button big wide smooth-scroll-middle">Resume</a></li>
+								<li><a href="https://pdfhost.io/v/Gdta04PzW_Jean_Yang_Resume" rel="noopener noreferrer" target="_blank" class="button big wide smooth-scroll-middle">Resume</a></li>
 							</ul>
 						</div>
 						<div class="image">
