--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
 							<p class="major">I'm a full stack software engineer, proficient with React, Redux, and Rails. Loves hiking, traveling, and squash.
 								
 							</p>
-							<ul class="actions">
-								<li><a href="https://pdfhost.io/v/Gdta04PzW_Jean_Yang_Resume" rel="noopener noreferrer" target="_blank" class="button big wide smooth-scroll-middle">Resume</a></li>
+							<ul class="actions">https://drive.google.com/file/d/1ataIgwHYFTIKRM9CM0_69BkIHjtqP73H/view?usp=sharinghttps://pdfhost.io/v/Gdta04PzW_Jean_Yang_Resume" rel="noopener noreferrer" target="_blank" class="button big wide smooth-scroll-middle">Resume</a></li>
 							</ul>
 						</div>
 						<div class="image">
