--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Jean Yang</h1>
-							<p class="major">I'm a full stack software engineer, proficient with React, Redux, and Rails. Loves hiking, traveling, and squash.
+							<p class="major">I'm Jean Yang, a software engineer who thrives on turning complex problems into sleek, scalable solutions. From Python to React, I build tech that makes an impact and keeps things fun!
 								
 							</p>
 							<ul class="actions">
@@ -49,8 +49,6 @@
 								for people who enjoy sharing their life snippets.</p>
 							
 							<ul class="actions" id="buttons">
-								<li><a href="https://lifegram.herokuapp.com/#/" rel="noopener noreferrer" target="_blank"
-										class="button">Live</a></li>
 								<li><a href="https://github.com/jeanyang0519/Lifegram" rel="noopener noreferrer" target="_blank"
 										class="button">Github</a></li>
 							</ul>
@@ -87,7 +85,6 @@
 							<p>A single-page web app for students to develop mentorships and networks over shared interests and goals. 
 								Utilized MongoDB, Express.js, and React to create connections and live-chat functions.</p>
 							<ul class="actions live" >
-								<li><a href="http://light--up.herokuapp.com/#/" rel="noopener noreferrer" target="_blank" class="button">Live</a></li>
 								<li><a href="https://github.com/jeanyang0519/Light-Up" rel="noopener noreferrer" target="_blank" class="button">Github</a></li>
 							</ul>
 						</div>
