--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Jean Yang</h1>
-							<p class="major">I'm Jean Yang, a software engineer who thrives on turning complex problems into sleek, scalable solutions. From Python to React, I build tech that makes an impact and keeps things fun!
+							<p class="major">I'm Jean Yang, a software engineer who thrives on turning complex problems into sleek, scalable solutions. From Python to SQL, I build tech that makes an impact and keeps things fun!
 								
 							</p>
 							<ul class="actions">
-								<li><a href="https://pdfhost.io/v/Gdta04PzW_Jean_Yang_Resume" rel="noopener noreferrer" target="_blank" class="button big wide smooth-scroll-middle">Resume</a></li>
+								<li><a href="https://drive.google.com/file/d/1ataIgwHYFTIKRM9CM0_69BkIHjtqP73H/view?usp=sharing" rel="noopener noreferrer" target="_blank" class="button big wide smooth-scroll-middle">Resume</a></li>
 							</ul>
 						</div>
 						<div class="image">
