--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Jean Yang</h1>
-							<p class="major">I'm Jean Yang, a software engineer who thrives on turning complex problems into sleek, scalable solutions. From Python to SQL, I build tech that makes an impact and keeps things fun!
+							<p class="major">I'm a software engineer who thrives on turning complex problems into sleek, scalable solutions. From Python to SQL, I build tech that makes an impact and keeps things fun!
 								
 							</p>
 							<ul class="actions">
