--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					</section>
 
 				<!-- Two -->
-					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Hello Avocado</h2>
 							<!-- <p>Avocado is the new hot healthy superfood. You can see avocados everywhere - guacamole dips at your friend's party,
@@ -63,7 +63,7 @@
 
 				<!-- Three -->
 					
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in"
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in"
 						id="first">
 						<div class="content">
 							<h2>Lifegram</h2>
